# Photoslop

./: .gitignore  .secrets.baseline  .woodpecker.yml  BACKLOG.md  CHANGELOG.md  DESIGNDECISIONS.md  README.md  RECOMMENDATIONS.md  THIRD_PARTY_NOTICES.md  logo-transparent.ora  pyproject.toml  run.cmd  run.sh
.github/workflows/: ipados.yml  performance.yml  portable.yml  security.yml  test.yml
docs/v1/: README.md  accessibility.md  actions.md  adjustments.md  architecture.md  artboards.md  cli.md  coverage.md  distribution.md  feature-parity.md  file-formats.md  filter-plugins.md  filters.md  getting-started.md  ipados.md  keyboard-shortcuts.md  layers.md  mcp.md  model-backends.md  performance.md  recovery.md  security.md  selections.md  tools.md  transforms.md  vector-model.md  verification.md
examples/photoslop-invert-filter/: pyproject.toml
examples/photoslop-invert-filter/photoslop_invert/: __init__.py
ipados/: README.md  project.yml
ipados/Photoslop/: EditorStore.swift  EditorView.swift  Info.plist  PencilCanvas.swift  PhotoslopApp.swift  ProjectArchive.swift
ipados/PhotoslopTests/: EditorStoreTests.swift
photoslop/: __about__.py  __init__.py  __main__.py  _gegl_helper.py  accessibility.py  actionregistry.py  adjust.py  adjustpanel.py  app.py  appearance.py  appearancepanel.py  appicon.py  artboards.py  atomicio.py  benchmarks.py  canvas.py  cli.py  color.py  colorbalancedialog.py  colordialog.py  commands.py  cursors.py  curvesdialog.py  diagnostics.py  dialogs.py  document.py  errors.py  exportdialog.py  filterdialog.py  filters.py  geglpack.py  gimpbridge.py  gmicpack.py  huesatdialog.py  icons.py  io_formats.py  io_ora.py  io_raw.py  io_svg.py  layer.py  (+29 more)
scripts/: build-ipados.sh  build-portable-macos.sh  build-portable-windows.ps1  check-critical-coverage.py  check-version.py  generate-bundle-metadata.py  import-macos-signing-certificate.sh  install-ci-qt-linux.sh  install-macos.sh
tests/: conftest.py  test_accessibility.py  test_action_registry.py  test_actions_macro.py  test_adjust.py  test_adjust_scope.py  test_adjustment_layers.py  test_appearance.py  test_appicon.py  test_arbitrary_rotate.py  test_artboards.py  test_atomic_io.py  test_blend_modes.py  test_bracket_shortcuts.py  test_brush_flow.py  test_brush_scatter.py  test_brush_spacing.py  test_bundle_metadata.py  test_camera_raw.py  test_cli_combinations.py  test_cli_io.py  test_cli_options.py  test_clipping_masks.py  test_clone_stamp.py  test_cm_unit.py  test_color.py  test_color_balance.py  test_commands.py  test_content_aware_fill.py  test_content_aware_scale.py  test_crop_tool.py  test_cursors.py  test_curves.py  test_diagnostics.py  test_distort_transform.py  test_document.py  test_document_integrity.py  test_dodge_burn.py  test_drop_shadow.py  test_eraser_tool.py  (+79 more)
