[project]
name = "photoslop"
dynamic = ["version"]
description = "A memory-frugal, multiplatform, layered raster image editor built with Qt (PySide6)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aaron K. Clark", email = "cryptojones@owasp.org" }]
keywords = [
    "image-editor",
    "graphics",
    "raster",
    "layers",
    "qt",
    "pyside6",
    "painting",
    "photoshop-alternative",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Multimedia :: Graphics :: Editors :: Raster-Based",
]
dependencies = [
    "defusedxml>=0.7.1",
    "PySide6>=6.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
raw = [
    "rawpy>=0.21",
]
formats = [
    "pillow>=11.0",
    "pillow-jxl-plugin>=1.3",
]
gmic = [
    "gmic>=3.6",
]
lens = [
    "lensfunpy>=1.18",
    "exifread>=3.0",
]
mcp = [
    "mcp>=1.2",
]
build = [
    "pyinstaller==6.16.0",
]
security = [
    "bandit==1.8.6",
    "detect-secrets==1.5.0",
    "pip-audit==2.9.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.2,<8",
    "ruff>=0.4",
    "rawpy>=0.21",
    "pillow>=11.0",
    "pillow-jxl-plugin>=1.3",
    "lensfunpy>=1.18",
    "exifread>=3.0",
    "mcp>=1.2",
]

[project.scripts]
photoslop-cli = "photoslop.cli:main"
photoslop-mcp = "photoslop.server:main"

[project.gui-scripts]
photoslop = "photoslop.app:main"

[project.urls]
Homepage = "https://github.com/CryptoJones/Photoslop"
Repository = "https://github.com/CryptoJones/Photoslop"
Issues = "https://github.com/CryptoJones/Photoslop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "photoslop/__about__.py"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
# N802/N815: Qt overrides and signals are camelCase by contract.
ignore = ["N802", "N815"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
source = ["photoslop"]

[tool.coverage.report]
show_missing = true
skip_covered = true
