[project]
name = "photoslop-invert-filter"
version = "1.0.0"
description = "Reference Photoslop filter plugin — Invert"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aaron K. Clark", email = "cryptojones@owasp.org" }]
dependencies = ["photoslop>=1.4"]

[project.entry-points."photoslop.filters"]
invert = "photoslop_invert:InvertFilter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["photoslop_invert"]
